--- a/sources/PetSocialNetwork.App/_Imports.razor
+++ b/sources/PetSocialNetwork.App/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using PetSocialNetwork.App
 @using PetSocialNetwork.App.Layout
+@using MudBlazor
+@using PetSocialNetwork.App.ViewModel
+@using PetSocialNetwork.App.Services.UserProfile.Contracts
